tests/failing/outputs/list_remove_compile.out
:generateGrammarSource UP-TO-DATE
:compileJava UP-TO-DATE
:processResources NO-SOURCE
:classes UP-TO-DATE
:ljwrappers:compileJava UP-TO-DATE
:ljwrappers:processResources NO-SOURCE
:ljwrappers:classes UP-TO-DATE
:copyWrappers UP-TO-DATE
:rungenerated/Main.java:12: error: cannot find symbol
    public static T getb()
                  ^
  symbol:   class T
  location: class Main
generated/Main.java:14: error: cannot find symbol
        T b;
        ^
  symbol:   class T
  location: class Main
2 errors


BUILD SUCCESSFUL

